--- a/Abend1/slides.tex
+++ b/Abend1/slides.tex
@@ -88,17 +88,17 @@ http://koeln.ccc.de \\
 	\begin{itemize}
 		\item Einführung
 		\begin{itemize}
-			\item 2013-10-19 11:00 - C99 Einführung
+			\item 2013-10-19 11:00 --- C99 Einführung
 		\end{itemize}
 		\item Reguläre Termine
 		\begin{itemize}
-			\item 2012-10-21 19:30 - STM32-Einführung (heute)
-			\item 2012-10-28 19:30 - Peripherie des STM32
-			\item 2012-11-04 19:30 - Kommunikation mit anderen Bausteinen
-			\item 2012-11-11 19:30 - Kommunikation mit anderen Bausteinen (2)
-			\item 2012-11-18 19:30 - ???
-			\item 2012-11-25 19:30 - ???
-			\item 2012-11-28 19:30 - OpenChaos
+			\item 2013-10-21 19:30 --- STM32-Einführung (heute)
+			\item 2013-10-28 19:30 --- Peripherie des STM32
+			\item 2013-11-04 19:30 --- Kommunikation mit anderen Bausteinen
+			\item 2013-11-11 19:30 --- Kommunikation mit anderen Bausteinen (2)
+			\item 2013-11-18 19:30 --- Projektarbeit
+			\item 2013-11-25 19:30 --- Projektarbeit
+			\item 2013-11-28 19:30 --- OpenChaos
 		\end{itemize}
 	\end{itemize}
 \end{frame}
