--- a/Abend0/HelloWorld/slides.tex
+++ b/Abend0/HelloWorld/slides.tex
@@ -148,19 +148,6 @@ http://koeln.ccc.de \\
 \end{frame}
 
 \begin{frame}
-	\frametitle{Chipübersicht}
-	Datasheets sind eure Freunde! Ihr müsst allerdings auch erstmal lernen, wie man sie liest.
-	\begin{itemize}
-		\item Blockdiagramm: Datasheet STM32F407xx Seite 18
-		\item Alternate Pin Functions: Datasheet STM32F407xx Seite 45
-		\item Memory Map: Datasheet STM32F407xx Seite 63
-	\end{itemize}
-	Ist leider alles zu groß für die Slides :( \\
-	Datasheets liegen im Libarary-Repo unter docs/
-\end{frame}
-
-
-\begin{frame}
 	\frametitle{Externe Peripherie}
 	Wir haben einiges an externen Bauteilen bestellt. China sollte irgendwann liefern.
 	\begin{itemize}
@@ -191,6 +178,16 @@ http://koeln.ccc.de \\
 		\item Irgendwann hat man dann vielleicht ein gescanntes 3D-Objekt
 	\end{itemize}
 	Sowas in der Art, gerne auch einfacher. Seid kreativ!
+\end{frame}
+
+\begin{frame}
+	\frametitle{U23 VM}
+	Wir haben euch eine VMware Linux VM vorbereitet mit allem Kram den ihr brauchen werdet \\
+	Zu bekommen im Club auf unserem Fileserver: \\
+	\url{ftp://trillian/incoming/u23_2013}
+	\\
+	Username: u23 \\
+	Passwort: d
 \end{frame}
 
 
@@ -237,3 +234,6 @@ http://koeln.ccc.de \\
 		\item C4 wird ein Assembly haben, ihr kennt da also dann auch schon Leute :)
 	\end{itemize}
 \end{frame}
+
+\end{document}
+
