--- a/Abend1/slides.tex
+++ b/Abend1/slides.tex
@@ -547,7 +547,7 @@ rm 'testfile'
 	\frametitle{git pull}
 	\begin{itemize}
 		\item Holt Änderungen vom Server
-		\item Beispiel: \emph{git push [remote [branchname]]}
+		\item Beispiel: \emph{git pull [remote [branchname]]}
 	\end{itemize}
 \end{frame}
 
