--- a/Abend1/slides.tex
+++ b/Abend1/slides.tex
@@ -33,8 +33,8 @@
 	commentstyle=\color{sh_comment}\itshape
 	}
 
-\title[STM32 - u23 2012]
-{\textbf{STM32}\\u23 2013}
+\title[STM32 - u23 2013]
+{\textbf{STM32 Abend 1}\\u23 2013}
 
 \author[andy <andy@koeln.ccc.de>]
 {andy, florob, gordin, ike, meise, tobix, zakx}
