--- a/Abend3/slides.tex
+++ b/Abend3/slides.tex
@@ -238,9 +238,7 @@ void latch(void)
 
 \begin{frame} [fragile]
 	\frametitle{Logic Analyzer}
-	%\includegraphics[width=4in]{15_latch.png}
-	%TODO
-	TODO
+        \includegraphics[width=4in]{dump_bitbanging.png}
 \end{frame}
 
 
@@ -282,6 +280,7 @@ void latch(void)
 	\pause
 	\begin{itemize}
 		\item Man kann so mehrere Schieberegister hinter einander hängen
+                \item und braucht trotzdem nur 3 Pins
 	\end{itemize}
 \end{frame}
 
@@ -290,6 +289,7 @@ void latch(void)
 	\includegraphics[width=4in]{11_chaining.png}
 	\begin{itemize}
 		\item Man kann so mehrere Schieberegister hinter einander hängen
+                \item und braucht trotzdem nur 3 Pins
 	\end{itemize}
 \end{frame}
 
@@ -298,6 +298,7 @@ void latch(void)
 	\includegraphics[width=4in]{12_chaining.png}
 	\begin{itemize}
 		\item Man kann so mehrere Schieberegister hinter einander hängen
+                \item und braucht trotzdem nur 3 Pins
 	\end{itemize}
 \end{frame}
 
@@ -306,6 +307,7 @@ void latch(void)
 	\includegraphics[width=4in]{13_chaining.png}
 	\begin{itemize}
 		\item Man kann so mehrere Schieberegister hinter einander hängen
+                \item und braucht trotzdem nur 3 Pins
 	\end{itemize}
 \end{frame}
 
@@ -314,6 +316,7 @@ void latch(void)
 	\includegraphics[width=4in]{14_chaining.png}
 	\begin{itemize}
 		\item Man kann so mehrere Schieberegister hinter einander hängen
+                \item und braucht trotzdem nur 3 Pins
 	\end{itemize}
 \end{frame}
 
@@ -322,6 +325,7 @@ void latch(void)
 	\includegraphics[width=4in]{15_latch.png}
 	\begin{itemize}
 		\item Man kann so mehrere Schieberegister hinter einander hängen
+                \item und braucht trotzdem nur 3 Pins
 	\end{itemize}
 \end{frame}
 
@@ -553,8 +557,7 @@ void SPI2_IRQHandler(void) {
 
 \begin{frame} [fragile]
 	\frametitle{Logic Analyzer}
-	%\includegraphics[width=4in]{...}
-	%TODO Hab ich nicht gemacht
+        \includegraphics[width=4in]{dump_spi.png}
 \end{frame}
 
 \begin{frame} [fragile]
@@ -579,9 +582,7 @@ void SPI2_IRQHandler(void) {
 
 \begin{frame} [fragile]
 	\frametitle{Logic Analyzer}
-	%\includegraphics[width=4in]{15_latch.png}
-	%TODO
-	TODO
+        \includegraphics[width=4in]{dump_dma_spi_with_ints.png}
 \end{frame}
 
 
