andy -> ike, Datum korrigiert, heute gibts nur SPI - I2C dann nächstes mal

--- a/Abend3/slides.tex
+++ b/Abend3/slides.tex
@@ -34,10 +34,10 @@
 	commentstyle=\color{sh_comment}\itshape
 	}
 
-\title[STM32 - Schieberegister, SPI, I2C - u23 2013]
-{\textbf{STM32 - Schieberegister, SPI, I2C}\\u23 2013}
+\title[STM32 - Schieberegister, SPI - u23 2013]
+{\textbf{STM32 - Schieberegister, SPI}\\u23 2013}
 
-\author[andy <andy@koeln.ccc.de>]
+\author[ike <ike@koeln.ccc.de>]
 {andy, florob, gordin, ike, meise, tobix, zakx}
 
 \institute[Chaos Computer Club Cologne]
@@ -46,7 +46,7 @@ Chaos Computer Club Cologne e.V.\\
 http://koeln.ccc.de \\
 }
 
-\date{Cologne\\2013-10-28}
+\date{Cologne\\2013-11-04}
 
 \pgfdeclareimage[height=1cm]{barcode}{./c4-logo}
 \logo{\pgfuseimage{barcode}}
