Detailiertes Board hinzugefügt

--- a/OpenChaos/slides.tex
+++ b/OpenChaos/slides.tex
@@ -51,6 +51,7 @@ http://koeln.ccc.de \\
 		\item jährlich
 		\item Teilnehmer bis 23 Jahre
 		\item irgendwelche Soft-, oder Hardwareprojekte
+		\item jedes Jahr ca. 20 Teilnehmer
 	\end{itemize}
 \end{frame}
 
@@ -78,6 +79,11 @@ http://koeln.ccc.de \\
 			\item 100pin LQFP
 			\end{itemize}
 	\end{columns}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Boarddetails}
+	\includegraphics[height=2.5in]{stm32f4_discovery_beschriftet.png}
 \end{frame}
 
 \begin{frame}{Bauteile}
